--- a/index.html
+++ b/index.html
@@ -94,4 +94,156 @@
       position: relative;
       border-radius: 6px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      overflo
+      overflow: hidden;
+    }
+
+    .label {
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      font-size: 11px;
+      color: #7a2a3a;
+      line-height: 1.2;
+      opacity: 0.85;
+    }
+
+    /* Heart seal */
+    .seal {
+      width: 64px;
+      height: 64px;
+      background: radial-gradient(circle at 30% 30%, #d9485f, #9e0f24);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) rotate(45deg);
+      cursor: pointer;
+      box-shadow:
+        0 6px 0 #7d0b1a,
+        0 10px 18px rgba(0,0,0,0.35);
+    }
+
+    .seal::before,
+    .seal::after {
+      content: '';
+      position: absolute;
+      width: 64px;
+      height: 64px;
+      background: radial-gradient(circle at 30% 30%, #d9485f, #9e0f24);
+      border-radius: 50%;
+      box-shadow: inset -3px -3px 0 rgba(255,255,255,0.25);
+    }
+
+    .seal::before {
+      top: -32px;
+      left: 0;
+    }
+
+    .seal::after {
+      left: -32px;
+      top: 0;
+    }
+
+    .seal .lace {
+      position: absolute;
+      inset: -10px;
+      border-radius: 50%;
+      background: repeating-radial-gradient(
+        circle,
+        rgba(255,255,255,0.9) 0 2px,
+        rgba(255,255,255,0) 2px 6px
+      );
+      filter: drop-shadow(0 1px 0 rgba(0,0,0,0.15));
+      pointer-events: none;
+    }
+
+    /* Letter */
+    .letter {
+      width: 360px;
+      padding: 30px 20px;
+      background: #fffafc;
+      border-radius: 8px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+
+    .letter h1 {
+      margin-bottom: 30px;
+      font-size: 26px;
+      color: #b11226;
+    }
+
+    .options {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .btn {
+      padding: 14px;
+      border-radius: 30px;
+      border: none;
+      cursor: pointer;
+      font-size: 14px;
+      transition: transform 0.2s ease;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+    }
+
+    .lavender {
+      background: #e6d9ff;
+    }
+
+    .pink {
+      background: #ffe1eb;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- PAGE 1 -->
+  <div class="page" id="page1">
+    <div class="envelope">
+      <div class="label">
+        To: My Rob<br>
+        From: Nikka (your amazing girlfriend btw)
+      </div>
+
+      <div class="seal" onclick="openLetter()">
+        <span class="lace"></span>
+      </div>
+    </div>
+
+    <!-- Floating hearts -->
+    <div class="heart" style="top:10%; left:15%;"></div>
+    <div class="heart" style="top:70%; left:20%;"></div>
+    <div class="heart" style="top:20%; left:80%;"></div>
+    <div class="heart" style="top:60%; left:75%;"></div>
+  </div>
+
+  <!-- PAGE 2 -->
+  <div class="page hidden" id="page2">
+    <div class="letter">
+      <h1>Will you be my Valentine?</h1>
+
+      <div class="options">
+        <button class="btn lavender">
+          Yes, a 1000000x yes
+        </button>
+
+        <button class="btn pink">
+          Yes, always. All day, everyday. Until we grow old, YES
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function openLetter() {
+      document.getElementById('page1').classList.add('hidden');
+      document.getElementById('page2').classList.remove('hidden');
+    }
+  </script>
+</body>
+</html>
