--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     body {
       margin: 0;
       height: 100vh;
+      background: #f7c6d9;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: #f7c6d9; /* pastel pink */
       overflow: hidden;
     }
 
@@ -28,224 +28,4 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: opacity 1s ease;
-    }
-
-    .hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    /* ✨ Floating lavender chrome hearts */
-    .heart {
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background: linear-gradient(
-        135deg,
-        #e6dcff,
-        #b8a7ff 40%,
-        #efe9ff 55%,
-        #b8a7ff 70%,
-        #e6dcff
-      );
-      transform: rotate(45deg);
-      animation: float 12s infinite ease-in-out, shine 4s infinite linear;
-      opacity: 0.3;
-      filter: drop-shadow(0 2px 6px rgba(180,160,255,0.7));
-    }
-
-    .heart::before,
-    .heart::after {
-      content: '';
-      position: absolute;
-      width: 40px;
-      height: 40px;
-      background: inherit;
-      border-radius: 50%;
-    }
-
-    .heart::before {
-      top: -20px;
-      left: 0;
-    }
-
-    .heart::after {
-      left: -20px;
-      top: 0;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(0) rotate(45deg); }
-      50% { transform: translateY(-30px) rotate(45deg); }
-      100% { transform: translateY(0) rotate(45deg); }
-    }
-
-    @keyframes shine {
-      0% { background-position: 0% 50%; }
-      100% { background-position: 200% 50%; }
-    }
-
-    /* 💌 Envelope */
-    .envelope {
-      width: 320px;
-      height: 220px;
-      background: #ffffff;
-      position: relative;
-      border-radius: 6px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      overflow: hidden;
-    }
-
-    .label {
-      position: absolute;
-      top: 10px;
-      left: 12px;
-      font-size: 11px;
-      color: #7a2a3a;
-      line-height: 1.2;
-      opacity: 0.85;
-    }
-
-    /* ❤️ Vintage heart seal with lace */
-    .seal {
-      width: 64px;
-      height: 64px;
-      background: radial-gradient(circle at 30% 30%, #d9485f, #9e0f24);
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(45deg);
-      cursor: pointer;
-      box-shadow:
-        0 6px 0 #7d0b1a,
-        0 10px 18px rgba(0,0,0,0.35);
-    }
-
-    .seal::before,
-    .seal::after {
-      content: '';
-      position: absolute;
-      width: 64px;
-      height: 64px;
-      background: radial-gradient(circle at 30% 30%, #d9485f, #9e0f24);
-      border-radius: 50%;
-      box-shadow: inset -3px -3px 0 rgba(255,255,255,0.25);
-    }
-
-    .seal::before {
-      top: -32px;
-      left: 0;
-    }
-
-    .seal::after {
-      left: -32px;
-      top: 0;
-    }
-
-    .seal .lace {
-      position: absolute;
-      inset: -10px;
-      border-radius: 50%;
-      background: repeating-radial-gradient(
-        circle,
-        rgba(255,255,255,0.9) 0 2px,
-        rgba(255,255,255,0) 2px 6px
-      );
-      filter: drop-shadow(0 1px 0 rgba(0,0,0,0.15));
-      pointer-events: none;
-    }
-
-    /* 💌 Letter page */
-    .letter {
-      width: 360px;
-      padding: 30px 20px;
-      background: #fffafc;
-      border-radius: 8px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-
-    .letter h1 {
-      margin-bottom: 30px;
-      font-size: 26px;
-      color: #b11226;
-    }
-
-    .options {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .btn {
-      padding: 14px;
-      border-radius: 30px;
-      border: none;
-      cursor: pointer;
-      font-size: 14px;
-      transition: transform 0.2s ease;
-    }
-
-    .btn:hover {
-      transform: scale(1.05);
-    }
-
-    .lavender {
-      background: #e6d9ff;
-    }
-
-    .pink {
-      background: #ffe1eb;
-    }
-  </style>
-</head>
-
-<body>
-
-  <!-- PAGE 1 -->
-  <div class="page" id="page1">
-    <div class="envelope">
-      <div class="label">
-        To: My Rob<br>
-        From: Nikka (your amazing girlfriend btw)
-      </div>
-
-      <div class="seal" onclick="openLetter()">
-        <span class="lace"></span>
-      </div>
-    </div>
-
-    <!-- floating hearts -->
-    <div class="heart" style="top:10%; left:15%;"></div>
-    <div class="heart" style="top:70%; left:20%;"></div>
-    <div class="heart" style="top:20%; left:80%;"></div>
-    <div class="heart" style="top:60%; left:75%;"></div>
-  </div>
-
-  <!-- PAGE 2 -->
-  <div class="page hidden" id="page2">
-    <div class="letter">
-      <h1>Will you be my Valentine?</h1>
-
-      <div class="options">
-        <button class="btn lavender">
-          Yes, a 1000000x yes
-        </button>
-
-        <button class="btn pink">
-          Yes, always. All day, everyday. Until we grow old, YES
-        </button>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    function openLetter() {
-      document.getElementById('page1').classList.add('hidden');
-      document.getElementById('page2').classList.remove('hidden');
-    }
-  </script>
-
-</body>
-</html>
+      transition: opacit
