--- a/index.html
+++ b/index.html
@@ -4,28 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Will You Be My Valentine?</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Georgia', serif;
-    }
+  <div class="heart heart1"></div>
+  <div class="heart heart2"></div>
+  <div class="heart heart3"></div>
+  <div class="heart heart4"></div>
 
-    body {
-      margin: 0;
-      height: 100vh;
-      background: #f7c6d9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
+  <div class="card">
+    <p class="to-from">
+      To: My Rob <br>
+      From: Nikka (your amazing girlfriend btw)
+    </p>
 
-    .page {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: opacit
+    <div class="
