Link to letter page

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       From: Nikka (your amazing girlfriend btw)
     </div>
 
-    <div class="heart-sticker" onclick="alert('Next page coming next 😘')"></div>
+    <div class="heart-sticker" onclick="window.location.href='letter.html'"></div>
   </div>
 
 </body>
